<resources>
    <string name="app_name">UPES SPE Fest 2017</string>
    <string name="sign_in">Sign In</string>
    <string name="unknown_response">Unexpected onActivityResult response code</string>
    <string name="unknown_sign_in_response">Unknown response from AuthUI sign-in</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="sign_out_failed">Sign out failed</string>
    <string name="user_info_no_name">Unknown user</string>
    <string name="error_required_field">Required</string>
    <string name="error_upload_task_create">Couldn\'t create upload task.</string>
    <string name="error_user_not_signed_in">Error user not signed in.</string>
    <string name="post_upload_progress_message">Uploading...</string>
    <string name="new_comment_hint">Enter new comment</string>
    <string name="user_logged_out_error">You must be logged in to do that.</string>
    <string name="follow_user_error">Unable to follow user.</string>
    <string name="user_profile_photo">http://igcdn-photos-f-a.akamaihd.net/hphotos-ak-xpa1/t51.2885-19/929118_455075441302693_1605108410_a.jpg</string>
    <string name="event_title_1">Techuminati: Ideate Your Way</string>
    <string name="event_title_2">Petrabol: The Oily Journey</string>
    <string name="event_title_3">Mud Challenge: To Win, Get Your Hands Dirty</string>
    <string name="event_title_4">Amphora: The Oil Valley</string>
    <string name="event_title_5">Virtuoso: The Scientific Canvas</string>
    <string name="event_title_6">Breaking Bid</string>
    <string name="event_title_7">Petravolley: Practicing Sportsmanship</string>
    <string name="event_title_8">Symposium: War Of Words</string>
    <string name="event_title_9">Treasure Hunt: Hunt for glory</string>
    <string name="event_title_10">Noesis: The Knowledge Quest</string>
    <string name="event_title_11">Adzap: Make an offer they can\'t refuse</string>
    <string name="event_title_12">SPExhibit\nTechnical Model Presentation</string>
    <string name="event_desc_1">Expression and presentation of your research is the key to exchanging and innovating your ideas. Techuminati will be a highly competitive Paper presentation competition which covers various topics on the Oil and Gas Upstream Sector. It provides a chance to implement all three tools of an invention: Idea, Research and Prototype.</string>
    <string name="event_desc_2">"Some people think football is a matter of life and death. I assure you, it\'s much more."\n\nUPES SPE SC will be organizing \'Petrabol\', an adrenaline packed battle of boots. The teams would consist of 6 members with two on the bench. This modernized form of soccer is awaited with bated breaths as for the zest it delivers. So tie up your laces, polish up your faces and pre-ready your aces as this will test your spine.\n\nOne ball, million eyeballs.\n\nKeep learning. Keep growing.\n#Futsal #Petrabol #Soccerlove #Ourwork #Ourchapter #Ourlegacy</string>
    <string name="event_desc_3">“The possession of knowledge does not kill the sense of wonder and mystery. There\'s always more to it."\n\nMUD Challenge is an endeavor by the UPES SPE Student Chapter to assist the participants in applying their pedantic knowledge to the real world situations in order to embark a practical outlook. The participants are expected to build a well executed drilling mud with itemized properties. The finale of the exalted event will be a quizzing round.\n\nGet your hands dirty to clean up other contestants.\n\nKeep learning. Keep growing.\n\n#All_is_\'well\' #Mudhuddle #Ourwork #Ourchapter #Ourlegacy</string>
    <string name="event_desc_4">"Your own self-realization is the greatest service you can render the world."\n\nAmphora- The Oil Valley, is a facile event organised under the UPES SPE FEST 2K17. The greatest awakening comes when you are aware about your infinite nature.\n\nSince its infancy, Dehradun has served as the heart of endless petroleum research activities with the inhabitance of many reverent institutes. This event intends to test the person\'s erudition of various industry associated work which are proximately going on in the valley of Dehradun. This shall aid the participants in staying close to the researches going down the line.\n\nArrange for seatbelts, as this ride will take you places.\n\nKeep learning. Keep growing.\n\n#Amphora #Fest2k17 #Ourwork #Ourchapter #Ourlegacy</string>
    <string name="event_desc_5">"Creativity is allowing yourself to make mistakes. Art is knowing which ones to keep."\n\nUPES SPE FEST 2017 has stirred a live blizzard with it\'s set of events.\n\nUPES SPE SC is back with its prestigious \'Virtuoso\', allowing participants to speak through posters. It\'s time to blend the Da Vincis and Einsteins in you and create a scientific piece of art. Words can never express what imagery can. The event would test the levels of ingenuity and presentability which participants possess. Set free the maestro in you and pedal up this artistic hill.Keep learning. Keep growing.\n\n#Virtuoso #Postersspeak #ourwork #ourchapter #ourlegacy</string>
    <string name="event_desc_6">"A vision without a strategy remains an illusion."\n\n If rolling with the green bills is your passion and aiming high your zeal, we\'ve got just the right mix for you. Presenting \'Breaking Bid\', a contest which will revoke your reasoning, speed and penchant for Refining and the Petrochemical Industry. Participants strive to create finished products of the highest value by bidding on feedstocks and unit processes using virtual money. So set free the inherant bidder and glide past every hurdle.\n\n Keep learning. Keep growing.\n\n #bidforgood #Fest2k17 #Ourwork #Ourchapter#Ourlegacy</string>
    <string name="event_desc_7">"We have the speed of a Sprinter,
The pain tolerance of a Football player,
The endurance of a Swimmer,
The vertical of a Cheerleader,
The strength of a Bodybuilder,
The balance of a Gymnast,
And the heart of an Olympian."\n\nKeeping sportsmanship alive, UPES SPE Student Chapter as part of UPES SPE Fest 2017 presents Petravolley, a series of inter-university Volleyball matches that will take place interspersed with team play, hard work and camaraderie. So unleash your sporting spirit and get ready for what they say, Can\'t Stop The Rise.\n\nKeep learning. Keep growing.\n\n#SpikeTheBall #Petravolley #Ourwork #Ourchapter #Ourlegacy</string>
    <string name="event_desc_8">"Freedom is hammered out on the anvil of discussion, dissent and debate."\n\nAs part of the UPES SPE FEST 2017, UPES SPE SC presents Symposium: War of words, a stirring coalescence of technical knowledge and oratory skills. A fusion of esotericism and knowledge, marching in two rounds, this event will be a technical group discussion and debate contest. So pull up your socks folks and sink in the ocean of words, thoughts, debate and divergence. After all, the purpose of disagreement is not victory or defeat, it is progress.\n\nKeep learning. Keep growing.\n\n#Warofwords #Speakstreak #Ourwork #Ourchapter #Ourlegacy</string>
    <string name="event_desc_9">Everybody these days try thinking out of the box, don’t they? That would work wonders for Davy Jones for no one will open the box to find his heart!\n\nAye!\nThe key to invincibility lies with your brain. Unlock your inner Sherlock to make your way through the foxy little tricks to hit the bounty as the UPES SPE FEST 2017 brings to you the ‘Treasure Hunt’. Follow the bread crumbs to discern the location of the hidden treat or simply shoe every girl to trace your Cinderella. Wave your wands of wit and ‘wingardiumleviosa’ off the sheets covering the cached clues. Gather your fellow pirates and set sail to loot the unseen riches before somebody else does!\n\nThere’s a clue in everything. You want a golden crown, don’t you? A crown for a king ;)\n\nKeep learning. Keep growing.\n\n#Hunter_games #Treasureit #Ourwork#Ourchapter #Ourlegacy</string>
    <string name="event1_contact1">Akshay Gupta</string>
    <string name="event1_contact2">Melvin Mathew</string>
    <string name="event1_contact3"> </string>
    <string name="event1_phoneno1">+919897958802</string>
    <string name="event1_phoneno2">+917060325436</string>
    <string name="about1t">UPES SPE Student Chapter</string>
    <string name="about2t">UPES SPE Fest</string>
    <string name="about3t">Conquering Changes</string>
    <string name="about1">
        Established in 2009 under the flagship of SPE North India Section, the UPES SPE Student Chapter has made giant strides to transpire into a touchstone establishing its mission: to collect, disseminate and exchange technical knowledge among its members.\n\n
        The Chapter has the rare distinction of being awarded the Gold Standard Awards for consecutive three years (2011, 2012 and 2013) as well as the prestigious Outstanding Student Chapter Award (2014, 2015 and 2016) by SPE International.\n\n
        The UPES SPE Student Chapter members have been awarded several accolades and scholarships over the years. They have also attended several internationally acclaimed conferences and exhibitions like the India Drilling and Exploration Conference (IDEC), the SPE London Annual Conference, IPTC Doha, Qatar and IADC, Abu Dhabi.\n\n
        The SPE Student Chapter has become a globally acknowledged student-run organization scaling the infinite.
    </string>
    <string name="about2">
        The UPES SPE Fest is the annual convention of the UPES SPE Student Chapter which provides a common platform for mutual sharing of knowledge, experience and to strengthen the bonds of the future leaders of the Oil and Gas Industry. It has scaled to new heights since its inception in 2010, becoming grander each successive year.\n\n
        The Fest has witnessed active participation from various National and International universities including those from Afghanistan, Bangladesh, Kazakhstan, Pakistan, Saudi Arabia, Liberia and UAE. The convention hasbeen supported enthusiastically by the Oil and Gas Industry through companies like Shell, Schlumberger, Cairn India, ONGC, Essar Oil, Reliance Industries, Petronet LNG and Oil India Limited, which also conduct workshops and events during the Fest.\n\n
        The UPES Fest, 2016 was an inexplicable success. The Fest was graced by the presence of many experienced Industry professionals who bestowed the blooming buds of the Industry with the knowledge from their boundless experiences. The Fest witnessed a huge participation of 103 national, 20 local and 4 international delegates leading to the Synergism of the entire spectrum of Energy blooming throughout the world.
    </string>
    <string name="about3">The rise and descend of an industry is critical to its growth throughout the world economy but doesn’t define the robustness and sinewy of any industry. The Oil and Gas Industry, too, has recently endured one such downfall. Conquering this change has been a great challenge and the Industry is constantly evolving through it.\n\n
        “Challenges always lead to the revocation of stagnancy and cater to an industry’s pragmatic and contributive progress”. The Oil and Gas Industry has observed a number of surviving capabilities which have led to the exploration of economic, technological and technical prowess of the Industry.\n\n
        The UPES SPE Fest, 2017 has been designed to usher the budding professionals of the Industry through this challenge and its various aspects. It aims to bring about the awareness reverberating to the optimum relocation of resources and technology attributing the Industry’s survival.\n

</string>
</resources>