<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardUseCompatPadding="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="24dp">

                <!-- Image-->
                <ImageView
                    android:id="@+id/imgEvent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="400dp"

                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/c1" />

                <!-- Title-->
                <TextView
                    android:id="@+id/titleEvent"
                    android:layout_marginTop="10dp"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_title_1"/>

                <!-- Desc-->
                <TextView
                    android:id="@+id/descEvent"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/event_desc_1"/>

                <!-- Contacts-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text="Contact :"
                    android:textAllCaps="true"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/contact1Event"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/event1_contact1"
                        android:layout_marginRight="5dp"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/phoneNo1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="phone"
                        android:linksClickable="true"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:text="@string/event1_phoneno1"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/contact2Event"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:text="@string/event1_contact2"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/phoneNo2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="phone"
                        android:linksClickable="true"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:text="@string/event1_phoneno2"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/contact3Event"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/event1_contact3"
                        android:layout_marginRight="5dp"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/phoneNo3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="phone"
                        android:linksClickable="true"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:text="@string/event1_contact3"
                        android:textSize="14sp" />

                </LinearLayout>

                <!-- Register-->
                <Button
                    android:id="@+id/btnRegister"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Register" />
            </LinearLayout>

            <!-- Bookmark-->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="-5dp"
                android:src="@drawable/ic_bookmark_24dp" />


        </FrameLayout>
    </ScrollView>
</android.support.v7.widget.CardView>
