<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include
                    android:id="@+id/toolbar"
                    layout="@layout/custom_toolbar" />

            </android.support.design.widget.AppBarLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/style_color_primary_dark"
                    card_view:cardBackgroundColor="@color/style_color_primary_dark"
                    card_view:cardCornerRadius="4dp"
                    card_view:cardElevation="4dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.v7.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="4dp"
                            android:background="#fff"
                            card_view:cardCornerRadius="4dp"
                            card_view:cardElevation="4dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/about1t"
                                    android:textColor="@color/fab_color_pressed"
                                    android:textSize="24sp"
                                    android:textStyle="bold" />

                                <android.support.v7.widget.CardView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_margin="8dp"
                                    android:background="#fff"
                                    android:maxHeight="450dp"
                                    card_view:cardCornerRadius="4dp"
                                    card_view:cardElevation="4dp">

                                    <ImageView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:maxHeight="450dp"
                                        android:adjustViewBounds="true"
                                        android:scaleType="centerInside"
                                        android:src="@drawable/upesspestudentchapter" />

                                </android.support.v7.widget.CardView>


                            </LinearLayout>


                        </android.support.v7.widget.CardView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginTop="20dp"
                            android:text="@string/about1"
                            android:textColor="#fff"
                            android:textSize="15sp" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/style_color_primary_dark"
                    card_view:cardBackgroundColor="@color/style_color_primary_dark"
                    card_view:cardCornerRadius="4dp"
                    card_view:cardElevation="4dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.v7.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="4dp"
                            android:background="#fff"
                            card_view:cardCornerRadius="4dp"
                            card_view:cardElevation="4dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/about2t"
                                    android:textColor="@color/fab_color_pressed"
                                    android:textSize="24sp"
                                    android:textStyle="bold" />

                                <android.support.v7.widget.CardView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_margin="8dp"
                                    android:background="#fff"
                                    android:maxHeight="450dp"
                                    card_view:cardCornerRadius="4dp"
                                    card_view:cardElevation="4dp">

                                    <ImageView
                                        android:id="@+id/video_img_1"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:maxHeight="450dp"
                                        android:adjustViewBounds="true"
                                        android:scaleType="centerInside"
                                        android:src="@drawable/logo" />

                                </android.support.v7.widget.CardView>


                            </LinearLayout>


                        </android.support.v7.widget.CardView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginTop="20dp"
                            android:text="@string/about2"
                            android:textColor="#fff"
                            android:textSize="15sp" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/style_color_primary_dark"
                    card_view:cardBackgroundColor="@color/style_color_primary_dark"
                    card_view:cardCornerRadius="4dp"
                    card_view:cardElevation="4dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.v7.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="4dp"
                            android:background="#fff"
                            card_view:cardCornerRadius="4dp"
                            card_view:cardElevation="4dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/about3t"
                                android:textColor="@color/fab_color_pressed"
                                android:textSize="24sp"
                                android:textStyle="bold" />


                        </android.support.v7.widget.CardView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginTop="20dp"
                            android:text="@string/about3"
                            android:textColor="#fff"
                            android:textSize="15sp" />

                        <android.support.v7.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"
                            android:background="#fff"
                            android:maxHeight="450dp"
                            card_view:cardCornerRadius="4dp"
                            card_view:cardElevation="4dp">

                            <Button
                                android:id="@+id/website"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:background="@color/white"
                                android:textColor="@color/style_color_primary_dark"
                                android:elevation="5dp"
                                android:autoLink="web"
                                android:cursorVisible="true"
                                android:linksClickable="true"
                                android:textAllCaps="false"
                                android:text="Visit http://upesspe.org/"/>

                        </android.support.v7.widget.CardView>
                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</RelativeLayout>